--- a/packages/excalidraw/locales/fr-FR.json
+++ b/packages/excalidraw/locales/fr-FR.json
@@ -1,5 +1,7 @@
 {
   "labels": {
+    "sharp":"",
+    "round":"",
     "paste": "Coller",
     "pasteAsPlaintext": "Coller comme texte brut",
     "pasteCharts": "Coller les graphiques",
