--- a/packages/excalidraw/locales/es-ES.json
+++ b/packages/excalidraw/locales/es-ES.json
@@ -1,5 +1,7 @@
 {
   "labels": {
+    "sharp":"Afilado",
+    "round":"Redondo",
     "paste": "Pegar",
     "pasteAsPlaintext": "Pegar como texto sin formato",
     "pasteCharts": "Pegar gráficos",
