--- a/packages/excalidraw/locales/fr-FR.json
+++ b/packages/excalidraw/locales/fr-FR.json
@@ -1,7 +1,7 @@
 {
   "labels": {
-    "sharp":"",
-    "round":"",
+    "sharp":"Pointu",
+    "round":"Rond",
     "paste": "Coller",
     "pasteAsPlaintext": "Coller comme texte brut",
     "pasteCharts": "Coller les graphiques",
