Revert "Complete rounding task"
This reverts commit f04ede800c26065cdb41cea4d050d9e4ccf120fd.

--- a/packages/excalidraw/locales/fr-FR.json
+++ b/packages/excalidraw/locales/fr-FR.json
@@ -1,7 +1,7 @@
 {
   "labels": {
-    "sharp":"Pointu",
-    "round":"Rond",
+    "sharp":"",
+    "round":"",
     "paste": "Coller",
     "pasteAsPlaintext": "Coller comme texte brut",
     "pasteCharts": "Coller les graphiques",
